# ml-coding

./: pyproject.toml
attempts/: 2026-06-22_attention_001.md  2026-06-25_attention_001_reattempt.md
notes/: attention.md  decoding.md  interview_stories.md  kv_cache.md  mistakes.md  retrieval.md  rl_losses.md
prompts/: interviewer.md  reviewer.md  weekly_plan.md
questions/attention/: 001_scaled_dot_product_attention.md  002_multi_head_attention.md  003_causal_mask.md
src/ml_interview/: __init__.py  attention.py  decoding.py  kv_cache.py  losses.py  metrics.py  retrieval.py  transformer.py
src/ml_interview.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_attention.py  test_decoding.py  test_kv_cache.py  test_losses.py  test_metrics.py  test_retrieval.py  test_transformer.py
