[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-interview"
version = "0.1.0"
description = "ML coding interview practice library"
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
